--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ extras==1.0.0
 gunicorn==20.1.0
 importlib-metadata==3.10.1
 jsmin==3.0.0
+psycopg2==2.9.3
 pytz==2021.3
 soupsieve==2.3.1
 sqlparse==0.4.2
