--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url==0.5.0
 Django==3.2.9
 django-bootstrap-calendar==0.1.1
 django-bootstrap-v5==1.0.7
+django-heroku==0.3.1
 extras==1.0.0
 gunicorn==20.1.0
 importlib-metadata==3.10.1
