--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,9 @@
-asgiref==3.4.1
-beautifulsoup4==4.10.0
-dj-database-url==0.5.0
-Django==3.2.9
-django-bootstrap-calendar==0.1.1
-django-bootstrap-v5==1.0.7
-django-heroku==0.3.1
-extras==1.0.0
-gunicorn==20.1.0
-importlib-metadata==3.10.1
-jsmin==3.0.0
-psycopg2==2.9.3
+asgiref==3.5.2
+beautifulsoup4==4.11.1
+Django==4.1.4
+django-bootstrap-v5==1.0.11
+django-bootstrap5==22.2
+psycopg2-binary==2.9.5
 pytz==2021.3
 soupsieve==2.3.1
 sqlparse==0.4.2
